--- a/frontend/home.html
+++ b/frontend/home.html
@@ -1,74 +1,70 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Nearest Place and Blood Availability</title>
-<link rel="stylesheet" href="styles.css">
-</head>
-<body>
-<div class="container">
-    <h1>Nearest Place and Blood Availability</h1>
-    <div id="map"></div>
-    <div>
-        <label for="bloodType">Blood Type:</label>
-        <input type="text" id="bloodType" placeholder="Enter blood type">
-        <button onclick="findNearestPlace()">Find Nearest Place</button>
-    </div>
-    <div id="result"></div>
-</div>
-<script src="script.js"></script>
-</body>
-</html> -->
 
 
 
 <!DOCTYPE html>
-<!-- Coding By CodingNepal - www.codingnepalweb.com -->
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Blood Bank</title>
-    <link rel="icon" href="./assets/images/giphy.gif" />
-    <link rel="stylesheet" href="stylee.css">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Google Fonts Link For Icons -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,1,0" />
-    <script src="script.js" defer></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <title>Password Reset</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+        .container {
+            max-width: 400px;
+            margin: auto;
+        }
+        form {
+            display: flex;
+            flex-direction: column;
+            margin-bottom: 20px;
+        }
+        label {
+            margin-bottom: 5px;
+        }
+        input[type="email"],
+        input[type="password"],
+        input[type="text"] {
+            padding: 10px;
+            margin-bottom: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        button {
+            padding: 10px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #0056b3;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h2>Forgot Password</h2>
+        <form id="request-reset-form">
+            <label for="email">Email:</label>
+            <input type="email" id="email" required>
+            <button type="submit">Send Reset Email</button>
+        </form>
 
-  </head>
-  <body>
-    <div class="photo">
-      <img src="../Chatbot/chat.gif" alt="img">
-    </div>
-   
-    <button class="chatbot-toggler">
-      <span class="material-symbols-rounded">mode_comment</span>
-      <span class="material-symbols-outlined">close</span>
-    </button>
-    <div class="chatbot">
-      <header>
-        <h2>Blood Bank ChatBot</h2>
-        <span class="close-btn material-symbols-outlined">close</span>
-      </header>
-      <ul class="chatbox">
-        <li class="chat incoming">
-          <span class="material-symbols-outlined">smart_toy</span>
-          <p>Hi there 👋<br>can I help you today?</p>
-          
-        </li>
-        <!-- New list item for the blood type question -->
-        <li class="chat outgoing">
-        </li>
-      </ul>
-      <div class="chat-input">
-        <textarea placeholder="Enter a message..." spellcheck="false" required></textarea>
-        <span id="sendBtn" class="material-symbols-rounded">send</span>
-         <span id="micBtn" class="material-symbols-rounded">mic</span>
-      </div>
+        <h2>Reset Password</h2>
+        <form id="reset-password-form">
+            <label for="token">Reset Token:</label>
+            <input type="text" id="token" required>
+            <label for="new-password">New Password:</label>
+            <input type="password" id="new-password" required>
+            <button type="submit">Reset Password</button>
+        </form>
     </div>
 
-  </body>
+    <script src="script.js"></script>
+</body>
 </html>
+
