--- a/frontend/home.html
+++ b/frontend/home.html
@@ -1,65 +1,24 @@
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Password Reset</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-        .container {
-            max-width: 400px;
-            margin: auto;
-        }
-        form {
-            display: flex;
-            flex-direction: column;
-            margin-bottom: 20px;
-        }
-        label {
-            margin-bottom: 5px;
-        }
-        input[type="email"],
-        input[type="password"],
-        input[type="text"] {
-            padding: 10px;
-            margin-bottom: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-        button {
-            padding: 10px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #0056b3;
-        }
-    </style>
+    <title>Forgot Password</title>
+    <link rel="stylesheet" href="stylee.css">
 </head>
 <body>
     <div class="container">
         <h2>Forgot Password</h2>
-        <form id="request-reset-form">
+        <form id="forgotPasswordForm">
             <label for="email">Email:</label>
-            <input type="email" id="email" required>
-            <button type="submit">Send Reset Email</button>
+            <input type="email" id="email" name="email" required>
+            <button type="submit">Submit</button>
         </form>
 
-        <h2>Reset Password</h2>
-        <form id="reset-password-form">
-            <label for="token">Reset Token:</label>
-            <input type="text" id="token" required>
-            <label for="new-password">New Password:</label>
-            <input type="password" id="new-password" required>
+        <h2 id="resetPasswordTitle" style="display: none;">Reset Password</h2>
+        <form id="resetPasswordForm" style="display: none;">
+            <label for="newPassword">New Password:</label>
+            <input type="password" id="newPassword" name="newPassword" required>
             <button type="submit">Reset Password</button>
         </form>
     </div>
@@ -67,4 +26,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
